examples/c/error-codes/violates-constraint/fatal/CV-TDL4-bad-static.output
CV-TDL4-bad-static.c:5:6: error: redefinition of 'a'
 int a;
     ^
CV-TDL4-bad-static.c:4:6: note: previous definition is here
 int a;
     ^
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-Hgyu3/pp-ctmp1.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
